<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_camera_black_24dp"
        android:title="@string/title_camera"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_my_activity"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_my_activity"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />

</menu>