<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.dambarbahadurpun.android.insta.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_messagesFragment"
            app:destination="@id/messagesFragment" />
    </fragment>

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.dambarbahadurpun.android.insta.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/myActivityFragment"
        android:name="com.dambarbahadurpun.android.insta.ui.my_activity.MyActivityFragment"
        android:label="@string/title_my_activity"
        tools:layout="@layout/fragment_my_activity" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.dambarbahadurpun.android.insta.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.dambarbahadurpun.android.insta.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.dambarbahadurpun.android.insta.ui.message.MessagesFragment"
        android:label="fragment_messages"
        tools:layout="@layout/fragment_messages" >
        <action
            android:id="@+id/action_messagesFragment_to_messageFragment"
            app:destination="@id/messageFragment" />
    </fragment>
    <fragment
        android:id="@+id/messageFragment"
        android:name="com.dambarbahadurpun.android.insta.ui.message.MessageFragment"
        android:label="fragment_message"
        tools:layout="@layout/fragment_message" />
</navigation>